@@ -1,3 +1,8 @@
+2013-12-05  Kostya Serebryany  <kcc@google.com>
+
+	* All source files: Merge from upstream r196489.
+	* merge.sh: Add *.S to the list of merged files.
+
 2013-12-05  Yury Gribov  <y.gribov@samsung.com>
 
 	PR sanitizer/59368
